reformat the index page

--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
             <div class="column">
                 <div id="login">
                     <label for="position">
-                        Select your position
+                        Select your position:
                     </label>
                     <select name="position" id="position">
                         <!-- Insert Positions Here -->
@@ -26,7 +26,7 @@
                         <option>KZLA_CTR</option>
                     </select>
                     <label for="vid">
-                        Enter your VID.
+                        Enter your VID:
                     </label>
                     <input type="number" name="vid" id="vid">
                     <button id="login">
