change VID to key

--- a/login.html
+++ b/login.html
@@ -25,10 +25,10 @@
                         <option>KLAX_TWR</option>
                         <option>KZLA_CTR</option>
                     </select>
-                    <label for="vid">
-                        Enter your VID:
+                    <label for="key">
+                        Enter your key:
                     </label>
-                    <input type="number" name="vid" id="vid">
+                    <input type="number" name="key" id="key">
                     <button id="login">
                         Log In
                     </button>
